--- a/_includes/local_masthead.html
+++ b/_includes/local_masthead.html
@@ -5,25 +5,6 @@
   </div>
 
   <header id="masthead-black-bar" class="clearfix masthead-black-bar">
-    <nav class="row">
-      <ul id="global-nav" class="menu global-nav text-right">
-        <!-- set active class as appropriate -->
-        <li class="home-mobile"><a href="//www.ebi.ac.uk"></a></li>
-        <li class="home active"><a href="//www.ebi.ac.uk">EMBL</a></li>
-        <li class="location grenoble active"><a href="#">Grenoble</a></li>
-        <li class="float-right show-for-medium embl-selector">
-          <button class="button float-right">&nbsp;</button>
-        </li>
-        <li class="float-right search">
-          <a href="#" data-toggle="search-global-dropdown"><span class="show-for-small-only">Search</span></a>
-          <div id="search-global-dropdown" class="dropdown-pane" data-dropdown data-options="closeOnClick:true;">
-          <!-- The dropdown menu will be programatically added by script.js -->
-          </div>
-        </li>
-        <li class="about"><a href="//www.ebi.ac.uk/about">About us</a></li>
-        <li class="training"><a href="//www.ebi.ac.uk/training">Training</a></li>
-        <li class="research active"><a href="//www.ebi.ac.uk/research">Research</a></li>
-        <li class="services"><a href="//www.ebi.ac.uk/services">Services</a></li>
-      </ul>
-    </nav>
+    <!-- Will be populated by script.js -->
+    <!-- Active item will be set through embl:facet metatags -->
   </header>
