--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -4445,6 +4445,7 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
     background: no-repeat 100% 50% url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg);
     padding-left: 2px;
     background-size: 62px;
+    width: 63px;
     padding-right: 17px;
     line-height: 12px; }
   .masthead-black-bar .embl-selector .button.hover,
@@ -4532,7 +4533,6 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
     .masthead-black-bar .global-nav li.barcelona.active {
       float: left; }
   .masthead-black-bar .global-nav li.embl.hover a:before,
-  .masthead-black-bar .global-nav li.ebi.hover a:before,
   .masthead-black-bar .global-nav li.grenoble.hover a:before,
   .masthead-black-bar .global-nav li.hamburg.hover a:before,
   .masthead-black-bar .global-nav li.heidelberg.hover a:before,
@@ -4542,7 +4542,8 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
     content: "" !important; }
   .masthead-black-bar .global-nav li.where a:before {
     content: '['; }
-  .masthead-black-bar .global-nav li.home a:before {
+  .masthead-black-bar .global-nav li.home a:before,
+  .masthead-black-bar .global-nav li.ebi a:before {
     content: 'H'; }
   .masthead-black-bar .global-nav li.services a:before {
     content: '('; }
