--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -30,11 +30,25 @@ $alert-color: #ec5840;
 $light-gray: #e6e6e6;
 $medium-gray: $ebi-colour-medium-grey;
 $dark-gray: #8a8a8a;
+$black: #0a0a0a;
+$white: #fefefe;
 
 $body-background: $ebi-colour-white;
+
+// typography
+$body-antialiased: true;
 $body-font-color: $ebi-colour-dark;
 $body-font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
+
+// Set foundation colours
+$foundation-palette: (
+  primary: $primary-color,
+  secondary: $ebi-colour-medium-grey,
+  success: $success-color,
+  warning: $warning-color,
+  alert: $alert-color,
+);
 
 // Label tweaks
 $label-background: $ebi-colour-white;
