--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -2,8 +2,8 @@
 // https://wwwdev.ebi.ac.uk/style-lab/general/#embl-ebi-official-colours
 $ebi-colour-dark: #222;
 $ebi-colour-light: #f8f8f8;
-$ebi-colour-dark-grey: #666;;
-$ebi-colour-medium-grey: #999;;
+$ebi-colour-dark-grey: #555;
+$ebi-colour-medium-grey: #777;
 $ebi-colour-light-grey: #eaeaea;
 $ebi-colour-light-green: rgb(109,171,73);
 $ebi-colour-dark-green: rgb(56,145,152);
